<resources>
    <string name="app_name">Android_1_02</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_even">=</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_devide">/</string>
    <string name="button_multiply">x</string>
    <string name="button_dot">.</string>
    <string name="button_percent">%</string>
    <string name="button_clear">C</string>
    <string name="button_delete">del</string>
    <string name="button_starttext"> </string>
    <string name="themeSwitch_on">DAY</string>
    <string name="themeSwitch_off">off</string>
    <string name="deafultTheme">Default Theme</string>
    <string name="dayTheme">Day Theme</string>
    <string name="nightTheme">Night Theme</string>
    <string name="myTheme">My Theme</string>
    <string name="applyThemeButton">Apply Theme</string>
</resources>