<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CalculatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/button_8"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_8"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <Button
        android:id="@+id/button_7"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_7"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintTop_toTopOf="@id/button_8" />

    <Button
        android:id="@+id/button_9"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_9"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@id/guideline5" />

    <Button
        android:id="@+id/button_5"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_5"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <Button
        android:id="@+id/button_4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_4"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/button_5"
        app:layout_constraintTop_toBottomOf="@id/button_7" />

    <Button
        android:id="@+id/button_6"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_6"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/button_9" />

    <Button
        android:id="@+id/button_2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_2"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <Button
        android:id="@+id/button_1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_1"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/button_2"
        app:layout_constraintTop_toBottomOf="@id/button_4" />

    <Button
        android:id="@+id/button_3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_3"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/button_6" />

    <Button
        android:id="@+id/button_0"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_0"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <Button
        android:id="@+id/button_dot"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_dot"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <Button
        android:id="@+id/button_multiply"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_multiply"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintTop_toBottomOf="@id/guideline5" />

    <Button
        android:id="@+id/button_minus"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_minus"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintTop_toBottomOf="@id/button_multiply" />

    <Button
        android:id="@+id/button_plus"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_plus"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/button_3"
        app:layout_constraintTop_toBottomOf="@id/button_minus" />

    <Button
        android:id="@+id/button_even"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_even"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/button_dot"
        app:layout_constraintTop_toBottomOf="@id/button_plus" />

    <Button
        android:id="@+id/button_devide"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_devide"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline5"
        app:layout_constraintStart_toEndOf="@id/button_percent" />

    <Button
        android:id="@+id/button_percent"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_percent"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline5"
        app:layout_constraintStart_toEndOf="@id/guideline4" />

    <Button
        android:id="@+id/button_delete"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:textSize="15sp"
        android:text=" "
        app:icon="@android:drawable/ic_input_delete"
        app:layout_constraintBottom_toBottomOf="@id/guideline5"
        app:layout_constraintEnd_toEndOf="@id/guideline4" />

    <Button
        android:id="@+id/button_clear"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_clear"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline5"
        app:layout_constraintEnd_toStartOf="@id/button_delete" />

    <TextView
        android:id="@+id/calculator_display"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#BFFFFFFF"
        android:inputType="number"
        android:text="@string/button_starttext"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/button_devide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>