<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_default_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deafultTheme"
            android:textColor="@color/grey_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/radioTheme" />

        <RadioButton
            android:id="@+id/radio_day_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_700"
            android:text="@string/dayTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_default_theme" />

        <RadioButton
            android:id="@+id/radio_night_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_700"
            android:text="@string/nightTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_day_theme" />

        <RadioButton
            android:id="@+id/radio_my_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_700"
            android:text="@string/myTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_night_theme" />

    </RadioGroup>

    <Button
        android:id="@+id/applyThemeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/applyThemeButton"
        app:layout_constraintTop_toBottomOf="@id/radioTheme" />

</androidx.constraintlayout.widget.ConstraintLayout>